--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Emil Sánchez</strong><br />
+					<h1><strong>Emil Sánchez</strong><br /><br />
 					Lic. Ciencias Políticas | Analista de Datos | Business Intelligence</h1>
 				</div>
 			</header>
