--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Emil Sánchez</strong><br /><br />
-					Lic. Ciencias Políticas | Analista de Datos | Business Intelligence</h1>
+					<h1><strong>Emil Sánchez</strong></h1>
+        				<h3>Lic. Ciencias Políticas | Analista de Datos<br />
+        				Business Intelligence</h3>
 				</div>
 			</header>
 
