--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Emil Sánchez</strong></h1>
-        				<h3>Lic. Ciencias Políticas | Analista de Datos<br />
-        				Business Intelligence</h3>
+					<h1 style="color: #ffffff"><strong>Emil Sánchez</strong></h1>
+        				<h3 style="color: rgba(255, 255, 255, 0.8)">Lic. Ciencias Políticas<br />
+					    Analista de Datos<br />
+        				    Business Intelligence</h3>
 				</div>
 			</header>
 
