--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="inner">
+				<div class="inner" style="text-align: center">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1 style="color: #ffffff"><strong>Emil Sánchez</strong></h1>
         				<h3 style="color: rgba(255, 255, 255, 0.8)">Lic. Ciencias Políticas<br />
