--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Emil Sánchez | Data Analyst</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,10 +30,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>LIC. CIENCIAS POLÍTICAS Y ADMINISTRATIVAS | ANALISTA DE DATOS | BUSINESS INTELIGENCE</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Licenciado en Ciencias políticas y administrativas, con amplia experiencia en el área TI. Capacitado como analista de datos con
+habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo,
+entendimiento de negocios, atención al cliente, soporte TI. Cuento con cuatro años de experiencia en el área de TI, tanto en el
+sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de distintas
+indoles relacionados con el área de las tecnologías de la información.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
