--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>LIC. CIENCIAS POLÍTICAS Y ADMINISTRATIVAS | ANALISTA DE DATOS | BUSINESS INTELIGENCE</h2>
+							<h2 style="color: rgba(255,255,255,0.8); font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">LIC. CIENCIAS POLÍTICAS Y ADMINISTRATIVAS | ANALISTA DE DATOS | BUSINESS INTELIGENCE</h2>
 						</header>
 						<p>Licenciado en Ciencias políticas y administrativas, con amplia experiencia en el área TI. Capacitado como analista de datos con
 habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo,
