--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<header class="major">
 							<h2>PERFIL PROFESIONAL</h2>
 						</header>
-						<p>Licenciado en Ciencias políticas y administrativas, con amplia experiencia en el área TI. Capacitado como analista de datos con
+						<p style="text-align: justify; text-justify: inter-word;">Licenciado en Ciencias políticas y administrativas, con amplia experiencia en el área TI. Capacitado como analista de datos con
 habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo,
 entendimiento de negocios, atención al cliente, soporte TI. Cuento con cuatro años de experiencia en el área de TI, tanto en el
 sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de distintas
