--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@ habilidades en transformación de datos crudos en insights accionables, elaborac
 entendimiento de negocios, atención al cliente, soporte TI. Cuento con cuatro años de experiencia en el área de TI, tanto en el
 sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de distintas
 indoles relacionados con el área de las tecnologías de la información.</p>
-					
+						<a 
+   							 href="https://forms.gle/UFEKFCRbHT13bseF6" 
+  							  class="button icon solid fa-file-download"
+   							 target="_blank"
+						>
+    								Solicitar CV
+						</a>
 					</section>
 
 				<!-- Two -->
