--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ sector público como privado, lo que me ha dotado con excelentes capacidades y a
 indoles relacionados con el área de las tecnologías de la información.</p>
 						<a 
    							 href="https://forms.gle/UFEKFCRbHT13bseF6" 
-  							  class="button icon solid fa-file-download"
+  							  class="button icon solid fa-file-alt"
    							 target="_blank"
 						>
     								Solicitar CV
