--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ indoles relacionados con el área de las tecnologías de la información.</p>
 						<h2>PORTAFOLIO</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=sharing" class="image fit thumb" target="_blank"><img src="images/Dashboard_potenciarsolidario.jpg" alt="" /></a>
+								<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=sharing" class="button" target="_blank"><img src="images/Dashboard_potenciarsolidario.jpg" height: 100px width:100px alt="" /></a>
 								<h3>Dashboard Interactivo - Fundación Potenciar Solidario (Looker Studio)</h3>
 								<p>Transformación de datos crudos a insights accionables. Proceso ETL, KPIS, diseño de Dashboard interactivo, tres secciones más portada.</p>
 							</article>
