--- a/index.html
+++ b/index.html
@@ -46,19 +46,69 @@ indoles relacionados con el área de las tecnologías de la información.</p>
 						</a>
 					</section>
 
-				<!-- Two -->
-					<section id="two">
-						<h2>PORTAFOLIO</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-      								  	<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=sharing" class="image fit thumb" target="_blank">
-          								 <img src="images/Dashboard_potenciarsolidario.jpg" alt="Dashboard Fundación Potenciar Solidario" />
-       									 </a>
-       									 <h3>Dashboard Interactivo - Fundación Potenciar Solidario (Looker Studio)</h3>
-       									 <p>Transformación de datos crudos a insights accionables. Proceso ETL, KPIS, diseño de Dashboard interactivo, tres secciones más portada.</p>
-  							  </article>
-							
-					</section>
+<!-- SECCIÓN PORTAFOLIO -->
+<section id="portfolio">
+    <h2>Portafolio Profesional</h2>
+    <div class="portfolio-grid">
+
+        <!-- ARTÍCULO 1 - DASHBOARD -->
+        <article class="portfolio-item">
+            <div class="portfolio-thumbnail">
+                <a href="portafolio/dashboard_potenciar.pdf" target="_blank">
+                    <img src="images/thumbs/dashboard-thumb.jpg" 
+                         alt="Dashboard Fundación Potenciar Solidario" 
+                         class="thumbnail-image">
+                    <div class="overlay">
+                        <span class="view-text">Ver Proyecto</span>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-content">
+                <h3>Dashboard Interactivo</h3>
+                <div class="tech-tags">
+                    <span class="tag">Looker Studio</span>
+                    <span class="tag">ETL</span>
+                    <span class="tag">KPIs</span>
+                </div>
+                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
+                <a href="https://lookerstudio.google.com/embed/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                   target="_blank" 
+                   class="button small">
+                   Versión Interactiva
+                </a>
+            </div>
+        </article>
+
+        <!-- ARTÍCULO 2 - POWER BI -->
+        <article class="portfolio-item">
+            <div class="portfolio-thumbnail">
+                <a href="portafolio/analisis_powerbi.pdf" target="_blank">
+                    <img src="images/thumbs/powerbi-thumb.jpg" 
+                         alt="Análisis Power BI" 
+                         class="thumbnail-image">
+                    <div class="overlay">
+                        <span class="view-text">Ver Proyecto</span>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-content">
+                <h3>Business Intelligence</h3>
+                <div class="tech-tags">
+                    <span class="tag">Power BI</span>
+                    <span class="tag">DAX</span>
+                    <span class="tag">SQL</span>
+                </div>
+                <p>Análisis de ventas con modelado de datos y medidas avanzadas DAX.</p>
+                <a href="portafolio/analisis_powerbi.pbix" 
+                   download 
+                   class="button small">
+                   Descargar .pbix
+                </a>
+            </div>
+        </article>
+
+    </div>
+</section>
 
 				<!-- Three -->
 					<section id="three">
