--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ indoles relacionados con el área de las tecnologías de la información.</p>
         <!-- ARTÍCULO 1 - DASHBOARD -->
         <article class="portfolio-item">
             <div class="portfolio-thumbnail">
-                <a href="portafolio/dashboard_potenciar.pdf" target="_blank">
+                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
                     <img src="images/Dashboard_potenciarsolidario.jpg" 
                          alt="Dashboard Fundación Potenciar Solidario" 
                          class="thumbnail-image">
