--- a/index.html
+++ b/index.html
@@ -78,7 +78,87 @@ indoles relacionados con el área de las tecnologías de la información.</p>
                 </a>
             </div>
         </article>
-
+<!-- ARTÍCULO 1 - DASHBOARD -->
+        <article class="portfolio-item">
+            <div class="portfolio-thumbnail">
+                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
+                    <img src="images/Dashboard_potenciarsolidario.jpg" 
+                         alt="Dashboard Fundación Potenciar Solidario" 
+                         class="thumbnail-image">
+                    <div class="overlay">
+                        <span class="view-text">Ver Proyecto</span>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-content">
+                <h3>Dashboard Interactivo</h3>
+                <div class="tech-tags">
+                    <span class="tag">Looker Studio</span>
+                    <span class="tag">ETL</span>
+                    <span class="tag">KPIs</span>
+                </div>
+                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
+                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                   target="_blank" 
+                   class="button small">
+                   Versión Interactiva
+                </a>
+            </div>
+        </article>
+	    <!-- ARTÍCULO 1 - DASHBOARD -->
+        <article class="portfolio-item">
+            <div class="portfolio-thumbnail">
+                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
+                    <img src="images/Dashboard_potenciarsolidario.jpg" 
+                         alt="Dashboard Fundación Potenciar Solidario" 
+                         class="thumbnail-image">
+                    <div class="overlay">
+                        <span class="view-text">Ver Proyecto</span>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-content">
+                <h3>Dashboard Interactivo</h3>
+                <div class="tech-tags">
+                    <span class="tag">Looker Studio</span>
+                    <span class="tag">ETL</span>
+                    <span class="tag">KPIs</span>
+                </div>
+                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
+                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                   target="_blank" 
+                   class="button small">
+                   Versión Interactiva
+                </a>
+            </div>
+        </article>
+	    <!-- ARTÍCULO 1 - DASHBOARD -->
+        <article class="portfolio-item">
+            <div class="portfolio-thumbnail">
+                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
+                    <img src="images/Dashboard_potenciarsolidario.jpg" 
+                         alt="Dashboard Fundación Potenciar Solidario" 
+                         class="thumbnail-image">
+                    <div class="overlay">
+                        <span class="view-text">Ver Proyecto</span>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-content">
+                <h3>Dashboard Interactivo</h3>
+                <div class="tech-tags">
+                    <span class="tag">Looker Studio</span>
+                    <span class="tag">ETL</span>
+                    <span class="tag">KPIs</span>
+                </div>
+                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
+                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                   target="_blank" 
+                   class="button small">
+                   Versión Interactiva
+                </a>
+            </div>
+        </article>
 
     </div>
 </section>
