--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ indoles relacionados con el área de las tecnologías de la información.</p>
 
 <!-- SECCIÓN PORTAFOLIO -->
 <section id="portfolio">
-    <h2>Portafolio Profesional</h2>
+    <h2>PORTAFOLIO PROFESIONAL</h2>
     <div class="portfolio-grid">
 
         <!-- ARTÍCULO 1 - DASHBOARD -->
@@ -78,6 +78,7 @@ indoles relacionados con el área de las tecnologías de la información.</p>
                 </a>
             </div>
         </article>
+	    
 <!-- ARTÍCULO 1 - DASHBOARD -->
         <article class="portfolio-item">
             <div class="portfolio-thumbnail">
