--- a/index.html
+++ b/index.html
@@ -15,22 +15,13 @@
 
 		<!-- Header -->
 			<header id="header">
-			<div class="inner">
-        			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
-       				 <h1><strong>Emil Sánchez</strong></h1>
-       					 <h3>
-          					  <span>Lic. Ciencias Políticas</span>
-           					 <span>Analista de Datos</span>
-         					   <span>Business Intelligence</span>
-       					 </h3>
-			 </div>
-				<!--<div class="inner" style="text-align: center">
+				<div class="inner" style="text-align: center">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1 style="color: #ffffff"><strong>Emil Sánchez</strong></h1>
         				<h3 style="color: rgba(255, 255, 255, 0.8)">Lic. Ciencias Políticas<br />
 					    Analista de Datos<br />
         				    Business Intelligence</h3>
-				</div>-->
+				</div>
 			</header>
 
 		<!-- Main -->
