--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
+		<header id="header">
+   			<div class="inner">
+        		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
+        		<h1><strong>Emil Sánchez</strong></h1>
+      		  	<h3>
+            		<span>Lic. Ciencias Políticas</span>
+            		<span>Analista de Datos</span>
+            		<span>Business Intelligence</span>
+        		</h3>
+   			 </div>
+		</header>
+
+		
+			<!--<header id="header">
 				<div class="inner" style="text-align: center">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1 style="color: #ffffff"><strong>Emil Sánchez</strong></h1>
@@ -22,7 +35,7 @@
 					    Analista de Datos<br />
         				    Business Intelligence</h3>
 				</div>
-			</header>
+			</header>-->
 
 		<!-- Main -->
 			<div id="main">
