--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 		<header id="header">
-   			<div class="inner">
+   			<div class="inner" style="text-align: center">
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         		<h1><strong>Emil Sánchez</strong></h1>
       		  	<h3>
