--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         		<h1><strong>Emil Sánchez</strong></h1>
       		  	<h3>
-            		<span>Lic. Ciencias Políticas</span><br />
+            		<span>Lic. Ciencias Políticas y Administrativas</span><br />
             		<span>Analista de Datos</span><br />
             		<span>Business Intelligence</span>
         		</h3>
