--- a/index.html
+++ b/index.html
@@ -501,11 +501,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/emil-sanchez/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/emil-sanchez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+   					 <li>&copy; Emil Sánchez - 2024</li>
+   					 <li>Analista de Datos | Business Intelligence</li>
+   					 <!-- Crédito  al template -->
+   					 <li>Template: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
+						</ul>
 				</div>
 			</footer>
 
