--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/emil-sanchez/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<ul class="copyright">
-   					 <li>&copy; Emil Sánchez - 2024</li>
-   					 <li>Analista de Datos | Business Intelligence</li>
+   					 <li>&copy; Emil Sánchez - 2025</li>
+   					 <li>Lic. Ciencias Políticas y Administrativas | Analista de Datos | Business Intelligence</li>
    					 <!-- Crédito  al template -->
    					 <li>Template: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 						</ul>
