--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</ul>
 					<ul class="copyright">
    					 <li>&copy; Emil Sánchez - 2025</li>
-   					 <li>Lic. Ciencias Políticas y Administrativas | Analista de Datos | Business Intelligence</li>
+   					 <li>Analista de Datos | Business Intelligence</li>
    					 <!-- Crédito  al template -->
    					 <li>Template: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 						</ul>
