--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ sector público como privado, lo que me ha dotado con excelentes capacidades y a
 
 <!-- SECCIÓN PORTAFOLIO -->
 <section id="portfolio">
-    <h2>PORTAFOLIO PROFESIONAL</h2>
+    <h2>PORTAFOLIO</h2>
     <div class="portfolio-grid">
 
         <!-- ARTÍCULO 1 - DASHBOARD -->
