--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 -->
 <html>
 	<head>
+		<!-- Favicon -->
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		
 		<title>Emil Sánchez | Data Analyst</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
