--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@ sector público como privado, lo que me ha dotado con excelentes capacidades y a
                    class="button small">
                    Versión Interactiva
                 </a>
+		<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" 
+                   target="_blank" 
+                   class="button small">
+                   Ver PDF
+                </a>
             </div>
         </article>
 	    
