--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ sector público como privado, lo que me ha dotado con excelentes capacidades y a
                 </a>
             </div>
             <div class="portfolio-content">
-                <h3>Dashboard Interactivo</h3>
+                <h3>Dashboard Interactivo - Looker Studio</h3>
                 <div class="tech-tags">
                     <span class="tag">Looker Studio</span>
                     <span class="tag">ETL</span>
