--- a/index.html
+++ b/index.html
@@ -49,11 +49,7 @@
 						<header class="major">
 							<h2>PERFIL PROFESIONAL</h2>
 						</header>
-						<p style="text-align: justify; text-justify: inter-word;">Licenciado en Ciencias políticas y administrativas, con amplia experiencia en el área TI. Capacitado como analista de datos con
-habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo,
-entendimiento de negocios, atención al cliente, soporte TI. Cuento con cuatro años de experiencia en el área de TI, tanto en el
-sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de distintas
-índoles relacionados con el área de las tecnologías de la información.</p>
+						<p style="text-align: justify; text-justify: inter-word;">Licenciado en Ciencias Políticas y Administrativas con formación en Análisis de datos, +4 años de experiencia en TI. Especializado en transformar datos crudos en insights accionables mediante herramientas como Power BI, Looker Studio, SQL, Excel, desarrollando dashboards interactivos para la toma de decisiones. Cuento con experiencia en soporte TI y atención al cliente, lo que me ha proporcionado la capacidad de entender necesidades de negocio y aplicarles soluciones técnicas. He trabajado tanto en sector público como privado, me adapto a diversos entornos. Me apasiona el mundo de los datos, lo que impulsa mi búsqueda de aprendizaje continuo en herramientas de análisis eficiente y automatización en Data Analytics. </p>
 						<a 
    							 href="https://forms.gle/UFEKFCRbHT13bseF6" 
   							  class="button icon solid fa-file-alt"
