--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 						>
     								Solicitar CV
 						</a>
+						<a 
+   							 href="https://www.linkedin.com/in/emil-sanchez/" 
+  							  class="button icon solid fa-file-alt"
+   							 target="_blank"
+						>
+    								Linkedin
+						</a>
 					</section>
 
 <!-- SECCIÓN PORTAFOLIO -->
