--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						</a>
 						<a 
    							 href="https://www.linkedin.com/in/emil-sanchez/" 
-  							  class="button icon solid fa-file-alt"
+  							  class=""icon brands fa-linkedin""
    							 target="_blank"
 						>
     								Linkedin
