--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<p style="text-align: justify; text-justify: inter-word;">Licenciado en Ciencias Políticas y Administrativas con formación en Análisis de datos, +4 años de experiencia en TI. Especializado en transformar datos crudos en insights accionables mediante herramientas como Power BI, Looker Studio, SQL, Python, Excel, desarrollando dashboards interactivos para la toma de decisiones. Cuento con experiencia en soporte TI y atención al cliente, lo que me ha proporcionado la capacidad de entender necesidades de negocio y aplicarles soluciones técnicas. He trabajado tanto en sector público como privado, me adapto a diversos entornos. Me apasiona el mundo de los datos, lo que impulsa mi búsqueda de aprendizaje continuo en herramientas de análisis eficiente y automatización en Data Analytics.</p>
 						<a 
    							 href="https://www.linkedin.com/in/emil-sanchez/" 
-  							  class=""icon brands fa-linkedin""
+  							  class="button icon brands fa-linkedin"
    							 target="_blank"
 						>
     								Linkedin
