--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             </div>
         </article>
 	    
-<!-- ARTÍCULO 1 - DASHBOARD -->
+<!-- ARTÍCULO 2 - Análisis de datos - Python -->
         <article class="portfolio-item">
             <div class="portfolio-thumbnail">
-                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
+                <a href="https://drive.google.com/file/d/1GIYOF39xrmBabUPNakK7N1BTlUV-xiDH/view?usp=sharing" target="_blank">
                     <img src="images/Dashboard_potenciarsolidario.jpg" 
-                         alt="Dashboard Fundación Potenciar Solidario" 
+                         alt="Análisis de datos - Python" 
                          class="thumbnail-image">
                     <div class="overlay">
                         <span class="view-text">Ver Proyecto</span>
@@ -118,74 +118,24 @@
                 </a>
             </div>
             <div class="portfolio-content">
-                <h3>Dashboard Interactivo</h3>
+                <h3>Análisis de datos - Python</h3>
                 <div class="tech-tags">
-                    <span class="tag">Looker Studio</span>
-                    <span class="tag">ETL</span>
-                    <span class="tag">KPIs</span>
+                    <span class="tag">Python</span>
+                    <span class="tag">Jupyter Notebook</span>
+                    <span class="tag">Pandas</span>
+		    <span class="tag">Numpy</span>
+		    <span class="tag">Matplotlib</span>
+		    <span class="tag">Seaborn</span>
                 </div>
-                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
-                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                <p>Análisis de comportamiento de clientes e-commerce: Variación de métodos de pago por edad y otros puntos clave.</p>
+                <a href="https://drive.google.com/file/d/1OVXnOw6vhp19jkqVFc_oEPwokm4V7flT/view?usp=sharing" 
                    target="_blank" 
                    class="button small">
-                   Versión Interactiva
+                   Descargar code y DB
                 </a>
             </div>
         </article>
-	    <!-- ARTÍCULO 1 - DASHBOARD -->
-        <article class="portfolio-item">
-            <div class="portfolio-thumbnail">
-                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
-                    <img src="images/Dashboard_potenciarsolidario.jpg" 
-                         alt="Dashboard Fundación Potenciar Solidario" 
-                         class="thumbnail-image">
-                    <div class="overlay">
-                        <span class="view-text">Ver Proyecto</span>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-content">
-                <h3>Dashboard Interactivo</h3>
-                <div class="tech-tags">
-                    <span class="tag">Looker Studio</span>
-                    <span class="tag">ETL</span>
-                    <span class="tag">KPIs</span>
-                </div>
-                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
-                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
-                   target="_blank" 
-                   class="button small">
-                   Versión Interactiva
-                </a>
-            </div>
-        </article>
-	    <!-- ARTÍCULO 1 - DASHBOARD -->
-        <article class="portfolio-item">
-            <div class="portfolio-thumbnail">
-                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
-                    <img src="images/Dashboard_potenciarsolidario.jpg" 
-                         alt="Dashboard Fundación Potenciar Solidario" 
-                         class="thumbnail-image">
-                    <div class="overlay">
-                        <span class="view-text">Ver Proyecto</span>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-content">
-                <h3>Dashboard Interactivo</h3>
-                <div class="tech-tags">
-                    <span class="tag">Looker Studio</span>
-                    <span class="tag">ETL</span>
-                    <span class="tag">KPIs</span>
-                </div>
-                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
-                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
-                   target="_blank" 
-                   class="button small">
-                   Versión Interactiva
-                </a>
-            </div>
-        </article>
+	  
 
     </div>
 </section>
