--- a/index.html
+++ b/index.html
@@ -92,16 +92,17 @@
                     <span class="tag">KPIs</span>
                 </div>
                 <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
-                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
-                   target="_blank" 
-                   class="button small">
-                   Versión Interactiva
-                </a>
 		<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" 
                    target="_blank" 
                    class="button small">
                    Ver PDF
                 </a>
+                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                   target="_blank" 
+                   class="button small">
+                   Versión Interactiva
+                </a>
+
             </div>
         </article>
 	    
@@ -128,7 +129,12 @@
 		    <span class="tag">Seaborn</span>
                 </div>
                 <p>Análisis de comportamiento de clientes e-commerce: Variación de métodos de pago por edad y otros puntos clave.</p>
-                <a href="https://drive.google.com/file/d/1OVXnOw6vhp19jkqVFc_oEPwokm4V7flT/view?usp=sharing" 
+                <a href="https://drive.google.com/file/d/1GIYOF39xrmBabUPNakK7N1BTlUV-xiDH/view?usp=sharing" 
+                   target="_blank" 
+                   class="button small">
+                   Ver PDF
+                </a>
+		<a href="https://drive.google.com/file/d/1OVXnOw6vhp19jkqVFc_oEPwokm4V7flT/view?usp=sharing" 
                    target="_blank" 
                    class="button small">
                    Descargar code y DB
