--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <article class="portfolio-item">
             <div class="portfolio-thumbnail">
                 <a href="https://drive.google.com/file/d/1GIYOF39xrmBabUPNakK7N1BTlUV-xiDH/view?usp=sharing" target="_blank">
-                    <img src="images/Dashboard_potenciarsolidario.jpg" 
+                    <img src="PPAD.jpg" 
                          alt="Análisis de datos - Python" 
                          class="thumbnail-image">
                     <div class="overlay">
