--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
   							  class="button icon solid fa-file-alt"
    							 target="_blank"
 						>
+    								Certificaciones
+						</a>
+						<a 
+   							 href="https://forms.gle/UFEKFCRbHT13bseF6" 
+  							  class="button icon solid fa-file-alt"
+   							 target="_blank"
+						>
     								Solicitar CV
 						</a>
 						
