--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						</a>
 						<a 
    							 href="https://forms.gle/UFEKFCRbHT13bseF6" 
-  							  class="button icon solid fa-file-alt"
+  							  class="button icon solid fa-certificate"
    							 target="_blank"
 						>
     								Certificaciones
