--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     <h2>PORTAFOLIO</h2>
     <div class="portfolio-grid">
 
-        <!-- ARTÍCULO 1 - DASHBOARD -->
+<!-- ARTÍCULO 1 - SQL + Power BI -->
         <article class="portfolio-item">
             <div class="portfolio-thumbnail">
-                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
-                    <img src="images/Dashboard_potenciarsolidario.jpg" 
-                         alt="Dashboard Fundación Potenciar Solidario" 
+                <a href="https://drive.google.com/file/d/1MNdjipZfJRkiVTIs_3Mz3dB9StjqrLf3/view?usp=sharing" target="_blank">
+                    <img src="images/Dashboard_potenciarsolidario.jpg"
+                         alt="Proyecto SQL + Power BI" 
                          class="thumbnail-image">
                     <div class="overlay">
                         <span class="view-text">Ver Proyecto</span>
@@ -92,24 +92,29 @@
                 </a>
             </div>
             <div class="portfolio-content">
-                <h3>Dashboard Interactivo - Looker Studio</h3>
+                <h3>Análisis de datos - MySQL + Power BI</h3>
                 <div class="tech-tags">
-                    <span class="tag">Looker Studio</span>
-                    <span class="tag">ETL</span>
-                    <span class="tag">KPIs</span>
+                    <span class="tag">MySQL</span>
+                    <span class="tag">Power BI</span>
+                    <span class="tag">Draw.io</span>
+		    <span class="tag">Pandas</span>
                 </div>
-                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
-		<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" 
+                <p>Análisis descriptivo de datos referentes a pedidos de clientes con bases cronológicas por día, mes y año.</p>
+                <a href="https://drive.google.com/file/d/1MNdjipZfJRkiVTIs_3Mz3dB9StjqrLf3/view?usp=drive_link" 
                    target="_blank" 
                    class="button small">
                    Ver PDF
                 </a>
-                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+		<a href="https://drive.google.com/file/d/1ENZXvFOOqzCg3P-ACK-CmH2Q0LuWrkQK/view?usp=sharing" 
                    target="_blank" 
                    class="button small">
-                   Versión Interactiva
+                   Descargar archivos
                 </a>
-
+		<a href="https://drive.google.com/file/d/1ME0LPbE8JZi8OSbnnx71KcI9zlfgDOp3/view?usp=sharing" 
+                   target="_blank" 
+                   class="button small">
+                   VideoDemo
+                </a>
             </div>
         </article>
 	    
@@ -146,6 +151,40 @@
                    class="button small">
                    Descargar code y DB
                 </a>
+            </div>
+        </article>
+
+ <!-- ARTÍCULO 3 - DASHBOARD Looker Studio -->
+        <article class="portfolio-item">
+            <div class="portfolio-thumbnail">
+                <a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" target="_blank">
+                    <img src="images/Dashboard_potenciarsolidario.jpg" 
+                         alt="Dashboard Fundación Potenciar Solidario" 
+                         class="thumbnail-image">
+                    <div class="overlay">
+                        <span class="view-text">Ver Proyecto</span>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-content">
+                <h3>Dashboard Interactivo - Looker Studio</h3>
+                <div class="tech-tags">
+                    <span class="tag">Looker Studio</span>
+                    <span class="tag">ETL</span>
+                    <span class="tag">KPIs</span>
+                </div>
+                <p>Dashboard ejecutivo con análisis de donaciones y proveedores para Fundación Potenciar Solidario.</p>
+		<a href="https://drive.google.com/file/d/1hvqjm-GyKgjcAGdyfUjaq1duAfDatxXS/view?usp=drive_link" 
+                   target="_blank" 
+                   class="button small">
+                   Ver PDF
+                </a>
+                <a href="https://lookerstudio.google.com/reporting/fcb411a2-7a21-415c-af57-53f62e550b2e" 
+                   target="_blank" 
+                   class="button small">
+                   Versión Interactiva
+                </a>
+
             </div>
         </article>
 	  
