--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		
-		<title>Emil Sánchez | Data Analyst</title>
+		<title>Emil Sánchez | Business intelligence | Data Analytics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,8 +24,8 @@
         		<h1><strong>Emil Sánchez</strong></h1>
       		  	<h3>
             		<span>Lic. Ciencias Políticas y Administrativas</span><br />
-            		<span>Analista de Datos</span><br />
-            		<span>Business Intelligence</span>
+            		<span>Business Intelligence</span><br />
+            		<span>Analista de Datos</span>
         		</h3>
    			 </div>
 		</header>
@@ -49,7 +49,7 @@
 						<header class="major">
 							<h2>PERFIL PROFESIONAL</h2>
 						</header>
-						<p style="text-align: justify; text-justify: inter-word;">Licenciado en Ciencias Políticas y Administrativas con formación en Análisis de datos, +4 años de experiencia en TI. Especializado en transformar datos crudos en insights accionables mediante herramientas como Power BI, Looker Studio, SQL, Python, Excel, desarrollando dashboards interactivos para la toma de decisiones. Cuento con experiencia en soporte TI y atención al cliente, lo que me ha proporcionado la capacidad de entender necesidades de negocio y aplicarles soluciones técnicas. He trabajado tanto en sector público como privado, me adapto a diversos entornos. Apasionado por el mundo de los datos, en aprendizaje continuo sobre herramientas de análisis eficiente y automatización en Data Analytics.</p>
+						<p style="text-align: justify; text-justify: inter-word;">Licenciando en ciencias políticas y administrativas con amplia experiencia en el área de Business Intelligence y Data Analytics. Capacitado como analista de datos con habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo, entendimiento de negocios, procesos ETL, machine learning, estadística. Cuento con dos años de experiencia en el área de datos, tanto en el sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de diferentes naturalezas y convertir sus datos en respuestas claras y objetivas.</p>
 						<a 
    							 href="https://www.linkedin.com/in/emil-sanchez/" 
   							  class="button icon brands fa-linkedin"
@@ -537,3 +537,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
