--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         		<h1><strong>Emil Sánchez</strong></h1>
       		  	<h3>
-            		<span>Lic. Ciencias Políticas y Administrativas</span><br />
-            		<span>Business Intelligence</span><br />
-            		<span>Analista de Datos</span>
+            		<span>Politólogo</span><br />
+            		<span>Analista de Datos</span><br />
+            		<span>Business Intelligence</span>
         		</h3>
    			 </div>
 		</header>
@@ -49,7 +49,7 @@
 						<header class="major">
 							<h2>PERFIL PROFESIONAL</h2>
 						</header>
-						<p style="text-align: justify; text-justify: inter-word;">Licenciando en ciencias políticas y administrativas con amplia experiencia en el área de Business Intelligence y Data Analytics. Capacitado como analista de datos con habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo, entendimiento de negocios, bases de datos, modelado de datos, procesos ETL, machine learning, estadística. Cuento con dos años de experiencia en el área de datos, tanto en el sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de diferentes naturalezas y convertir sus datos en respuestas claras y objetivas.</p>
+						<p style="text-align: justify; text-justify: inter-word;">Licenciado en ciencias políticas y administrativas con amplia experiencia en el área de Business Intelligence y Data Analytics. Capacitado como analista de datos con habilidades en transformación de datos crudos en insights accionables, elaboración de dashboard responsive e interactivo, entendimiento de negocios, bases de datos, modelado de datos, procesos ETL, machine learning, estadística. Cuento con dos años de experiencia en el área de datos, tanto en el sector público como privado, lo que me ha dotado con excelentes capacidades y aptitudes para abordar proyectos de diferentes naturalezas y convertir sus datos en respuestas claras y objetivas.</p>
 						<a 
    							 href="https://www.linkedin.com/in/emil-sanchez/" 
   							  class="button icon brands fa-linkedin"
@@ -537,6 +537,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
