--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         		<a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         		<h1><strong>Emil Sánchez</strong></h1>
       		  	<h3>
-            		<span>Politólogo</span><br />
-            		<span>Analista de Datos</span><br />
-            		<span>Business Intelligence</span>
+            		<span>Data analytics | Business intelligence | Politólogo</span><br />
         		</h3>
    			 </div>
 		</header>
@@ -537,6 +535,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
